--- a/g5Mindr/g5Mindr/ViewControllers/MDRReminderViewController.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/MDRReminderViewController.storyboard
@@ -74,18 +74,24 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxZ-tL-Ove">
+                                        <rect key="frame" x="260" y="20" width="80" height="80"/>
+                                        <connections>
+                                            <action selector="didPressEmojiButton:" destination="hba-q6-AHk" eventType="touchUpInside" id="ArB-aV-vRv"/>
+                                        </connections>
+                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="586-W0-aZf" userLabel="Label Container View">
                                         <rect key="frame" x="0.0" y="122" width="600" height="98"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ds1-mt-Jo0">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="25"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="24.5"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4HR-u5-N2D">
-                                                <rect key="frame" x="0.0" y="25" width="600" height="73"/>
+                                                <rect key="frame" x="0.0" y="24" width="600" height="73.5"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="17"/>
                                                 <color key="textColor" red="0.54901960780000003" green="0.72156862749999995" blue="0.89411764709999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -107,16 +113,20 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="SxZ-tL-Ove" firstAttribute="width" secondItem="YwW-ya-aoy" secondAttribute="width" id="2Km-hp-Xlt"/>
                                     <constraint firstAttribute="bottom" secondItem="nN1-f8-XT1" secondAttribute="bottom" id="4vL-if-PnD"/>
                                     <constraint firstAttribute="trailing" secondItem="586-W0-aZf" secondAttribute="trailing" id="9GR-iT-lKq"/>
                                     <constraint firstItem="Wos-O2-kHC" firstAttribute="centerX" secondItem="YwW-ya-aoy" secondAttribute="centerX" id="Elk-zs-BS1"/>
+                                    <constraint firstItem="SxZ-tL-Ove" firstAttribute="centerY" secondItem="YwW-ya-aoy" secondAttribute="centerY" id="HJa-Nx-2FK"/>
                                     <constraint firstItem="586-W0-aZf" firstAttribute="top" secondItem="YwW-ya-aoy" secondAttribute="bottom" constant="22" id="N0q-ZY-y9D"/>
                                     <constraint firstItem="YwW-ya-aoy" firstAttribute="centerX" secondItem="TtG-qd-qHf" secondAttribute="centerX" id="Oaa-Oa-dOb"/>
                                     <constraint firstAttribute="bottom" secondItem="586-W0-aZf" secondAttribute="bottom" id="Qcl-7Z-doG"/>
                                     <constraint firstItem="nN1-f8-XT1" firstAttribute="leading" secondItem="TtG-qd-qHf" secondAttribute="leading" id="S1s-PB-Hy4"/>
+                                    <constraint firstItem="SxZ-tL-Ove" firstAttribute="height" secondItem="YwW-ya-aoy" secondAttribute="height" id="W7Z-vi-KeE"/>
                                     <constraint firstItem="586-W0-aZf" firstAttribute="leading" secondItem="TtG-qd-qHf" secondAttribute="leading" id="Wx5-FJ-lsL"/>
                                     <constraint firstItem="iCQ-U5-qO8" firstAttribute="centerY" secondItem="Wos-O2-kHC" secondAttribute="centerY" id="XA3-nN-TNo"/>
                                     <constraint firstItem="YwW-ya-aoy" firstAttribute="top" secondItem="TtG-qd-qHf" secondAttribute="top" constant="20" id="YdZ-u6-pbq"/>
+                                    <constraint firstItem="SxZ-tL-Ove" firstAttribute="centerX" secondItem="YwW-ya-aoy" secondAttribute="centerX" id="cjz-Ux-Gcq"/>
                                     <constraint firstItem="Wos-O2-kHC" firstAttribute="centerY" secondItem="YwW-ya-aoy" secondAttribute="centerY" id="h7Q-db-sxR"/>
                                     <constraint firstAttribute="height" constant="220" id="i6F-WO-tbb"/>
                                     <constraint firstAttribute="trailing" secondItem="nN1-f8-XT1" secondAttribute="trailing" id="rHT-cu-iIA"/>
