--- a/g5Mindr/g5Mindr/ViewControllers/MDRReminderList.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/MDRReminderList.storyboard
@@ -283,7 +283,7 @@
                             </view>
                             <webView opaque="NO" contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6I1-V9-wt9">
                                 <rect key="frame" x="100" y="100" width="175" height="175"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="40x-WH-dC0"/>
