--- a/g5Mindr/g5Mindr/Base.lproj/LaunchScreen.storyboard
+++ b/g5Mindr/g5Mindr/Base.lproj/LaunchScreen.storyboard
@@ -37,24 +37,26 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIn-bT-yBE">
-                                <rect key="frame" x="120" y="255" width="175" height="227"/>
+                                <rect key="frame" x="120" y="252.5" width="175" height="232"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="OTi-D8-YFu">
-                                        <rect key="frame" x="0.0" y="0.0" width="175" height="174"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="179"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="4tn-3X-Xnm"/>
+                                            <constraint firstAttribute="height" constant="179" id="89M-8t-VoL"/>
                                             <constraint firstAttribute="width" secondItem="OTi-D8-YFu" secondAttribute="height" constant="1" id="fIK-XA-U4i"/>
                                             <constraint firstAttribute="height" constant="128" id="rYF-cN-2HI"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="4tn-3X-Xnm"/>
+                                                <exclude reference="fIK-XA-U4i"/>
                                                 <exclude reference="rYF-cN-2HI"/>
                                             </mask>
                                         </variation>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_text" translatesAutoresizingMaskIntoConstraints="NO" id="TNO-u0-2bl">
-                                        <rect key="frame" x="0.0" y="195" width="175" height="32"/>
+                                        <rect key="frame" x="0.0" y="200" width="175" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="TZA-N3-8Hu"/>
                                         </constraints>
